Otra version para probar configuracion ssh

--- a/Experimento2.html
+++ b/Experimento2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Este es el TITULO de mi HTML</h1>
+    <h1>Este es el TITULO de mi HTML 2.0</h1>
 </body>
 </html>
